--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@ body {
   font-size: 1.4em;
   line-height: 1.5em;
   color: rgb(41, 12, 41);
+  width: 90%;
+  margin: 0 auto;
+  background: linear-gradient(90deg, rgb(248, 233, 233), rgb(255, 246, 215));
+}
+blockquote {
+  width: 45%;
+  margin: 0 auto;
+  font-size: 1.6em;
+  background-color: rgb(243, 243, 243);
+  border-left: 3px solid rgb(182, 181, 181);
+  padding: 80px 30px;
 }
 
 a {
