--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "noto";
+  src: url("/fonts/Noto_Serif/NotoSerif-Regular.ttf");
+}
+
 body {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 1.4em;
@@ -5,25 +10,38 @@ body {
   color: rgb(41, 12, 41);
   width: 90%;
   margin: 0 auto;
-  background: linear-gradient(90deg, rgb(248, 233, 233), rgb(255, 246, 215));
 }
+body > header {
+  background-color: rgb(238, 130, 130);
+  padding: 20px;
+  margin-top: 100px;
+}
+
+h1 {
+  text-transform: uppercase;
+  color: white;
+  font-size: 2em;
+  padding: 15px 0px;
+  text-align: center;
+}
+
 blockquote {
   width: 45%;
   margin: 30px auto;
   font-size: 1.6em;
   background-color: rgb(243, 243, 243);
-  border-left: 3px solid rgb(182, 181, 181);
+  border-left: 3px solid rgb(247, 206, 206);
+  box-shadow: 3px 3px 9px rgb(247, 206, 206);
   padding: 80px 30px;
-}
-.villageois {
-  border-left: 3px solid rgb(172, 89, 89);
-}
-.fermier {
-  border-left: 3px solid rgb(223, 152, 152);
-}
-blockquote p {
+  clear: both;
   font-style: italic;
+  font-family: "noto";
 }
+blockquote header {
+  font-size: 0.7em;
+  font-family: "noto";
+}
+
 blockquote .bien {
   color: rgb(80, 212, 146);
   text-transform: uppercase;
@@ -31,6 +49,55 @@ blockquote .bien {
 blockquote .mal {
   color: rgb(212, 80, 80);
   text-transform: uppercase;
+}
+
+h2 {
+  text-align: center;
+  padding-top: 40px;
+}
+
+p {
+  padding: 40px 0;
+}
+ul {
+  margin: 0 auto;
+  width: 45%;
+  padding-bottom: 40px;
+}
+ul li {
+  padding: 20px 60px;
+  list-style-type: none;
+}
+
+ul li:nth-child(1) {
+  background-image: url(../img/bien.png);
+  background-repeat: no-repeat;
+  background-position: 0em 0.3em;
+}
+ul li:nth-child(2) {
+  background: url(../img/mal.png) no-repeat 0em 0.8em;
+}
+ul li:nth-child(3) {
+  background: url(../img/chat.png) no-repeat 0em 0.5em;
+}
+ul li:nth-child(2n) {
+  background-color: rgb(238, 130, 130);
+}
+ul li:nth-child(2n + 1) {
+  background-color: rgb(236, 152, 152);
+}
+/* arrivé ici*/
+
+#firstp {
+  font-weight: bold;
+  padding-top: 30px;
+}
+
+.villageois {
+  border-left: 3px solid rgb(172, 89, 89);
+}
+.fermier {
+  border-left: 3px solid rgb(223, 152, 152);
 }
 
 a {
@@ -73,4 +140,21 @@ table tr:nth-child(2n) {
 }
 table tr:nth-child(2n + 1) {
   background-color: rgb(243, 243, 243);
+}
+
+#img-eau {
+  float: left;
+  margin: 0 60px;
+  width: 50%;
+  background-color: white;
+}
+
+.sec1 {
+  font-size: 1.2em;
+  line-height: 1.4em;
+}
+figure {
+  width: 50%;
+  text-align: center;
+  margin: 0 auto;
 }
