--- a/css/bonus1.css
+++ b/css/bonus1.css
@@ -2,11 +2,12 @@ body {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
   line-height: 24px;
+  width: 100%;
 }
 
 p {
   font-size: 1em;
-  max-width: 480px;
+  max-width: 50%;
   margin-bottom: 24px;
 }
 
@@ -27,10 +28,64 @@ h1 span {
   text-align: right;
 }
 h2 {
-  text-transform: uppercase;
+  display: none;
 }
+
+#maj {
+  font-size: 48px;
+  padding-right: 6px;
+  line-height: 48px;
+  float: left;
+  color: #c94d4a;
+}
+
+h3 {
+  text-transform: uppercase;
+  text-indent: 48px;
+  letter-spacing: 0.2em;
+  padding-bottom: 24px;
+  color: #c94d4a;
+}
+article section {
+  padding: 24px;
+}
+
+article section:nth-child(2) h3 {
+  display: none;
+}
+
+article section:nth-child(2n + 1) {
+  background-color: #f5f5f5;
+}
+article section:nth-child(2n + 1) img {
+  width: 50%;
+  transform: translate(-50%, 0px);
+  border: 24px solid #f5f5f5;
+}
+
 article {
   margin: 0 auto;
   width: 50%;
   transform: translate(25%, 0px);
+}
+
+a {
+  text-decoration: none;
+  color: #3f658e;
+}
+a:hover {
+  color: #263e58;
+  font-size: 1.025em;
+}
+hr {
+  display: none;
+}
+
+footer p {
+  text-align: center;
+  width: 50%;
+  transform: translate(50%, 0px);
+  border-top: 2px solid green;
+  margin-top: 48px;
+  padding-top: 24px;
 }
