--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   font-family: "noto", Helvetica, sans-serif;
   font-size: 18px;
   line-height: 24px;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -29,13 +30,16 @@ p {
   margin-bottom: 24px;
 }
 
-h2 {
+h2,
+h3 {
   text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 a {
   text-decoration: underline;
   color: rgb(59, 59, 105);
 }
+
 blockquote {
   margin: 24px auto;
   width: 50%;
@@ -47,6 +51,7 @@ blockquote {
   transform: translate(0%, 0px);
 }
 blockquote p {
+  font-style: italic;
   text-indent: -8px;
   font-size: 1.6em;
   line-height: 1.6em;
@@ -94,4 +99,99 @@ article ul li {
 }
 #rocher img {
   width: 40%;
+}
+blockquote + p,
+h2 + p,
+#fermier + p,
+h3 + P {
+  width: 480px;
+  margin: 0 auto;
+}
+h2 + p {
+  padding-top: 24px;
+}
+
+#fermier {
+  text-align: center;
+  margin: 0 auto;
+  padding: 25px 0;
+}
+#fermier img {
+  width: 40%;
+}
+
+.bien,
+.mal {
+  text-transform: uppercase;
+}
+.bien {
+  color: rgb(72, 117, 72);
+}
+.mal {
+  color: red;
+}
+
+hr {
+  display: none;
+}
+hr + p {
+  text-align: center;
+  padding-bottom: 48px;
+}
+
+table {
+  width: 50%;
+  margin: 0 auto;
+}
+table tr:nth-child(2n + 1) {
+  background-color: #f7f7f7;
+}
+td,
+th {
+  padding: 24px;
+}
+
+h3 {
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  text-align: center;
+  padding-top: 48px;
+}
+
+footer {
+  background-color: #f7f7f7;
+  margin: 24px;
+  padding: 24px;
+  position: relative;
+}
+footer p {
+  margin: 0;
+  text-align: center;
+}
+footer p:nth-child(3) {
+  margin-bottom: 48px;
+}
+footer::before {
+  content: "";
+  background-color: #f7f7f7;
+
+  position: absolute;
+  top: 0;
+  right: -300px;
+  left: -300px;
+  bottom: 0;
+  z-index: -1;
+}
+footer ul {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+}
+a {
+  text-decoration: none;
+  color: rgb(218, 158, 90);
+}
+a:hover {
+  font-size: 1.025em;
+  color: rgb(206, 125, 33);
 }
