--- a/css/bonus2.css
+++ b/css/bonus2.css
@@ -12,31 +12,43 @@ body {
   font-family: "roboto", Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  width: 100vw;
 }
 
-p {
+p,
+ul {
   font-size: 1em;
   width: 480px;
   margin: 0 auto;
   text-align: justify;
   padding-bottom: 20px;
 }
-
+q {
+  display: block;
+  width: 480px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+}
 h1,
 h2,
 h3 {
   text-align: center;
-  padding: 20px 0;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.05em;
 }
 h1 {
   font-size: 2em;
+  line-height: 2em;
+  padding: 40px 0;
 }
 h2 {
-  font-size: 1.8em;
+  font-size: 1.6em;
+  padding: 40px 0;
+  background-color: rgb(20, 18, 18);
+  color: white;
 }
 h3 {
-  font-size: 1.4em;
+  font-size: 1.2em;
+  padding: 20px 0;
 }
 
 article {
@@ -58,12 +70,11 @@ article {
   margin: auto;
   width: 100%;
   padding-bottom: 0px;
-  height: 150px;
+  height: 300px;
   object-fit: cover;
 }
 section {
-  width: 100%;
-  margin: 0 auto;
+  padding: 0 24px;
   background-color: rgb(243, 243, 243);
 }
 section:nth-child(2n + 1) {
@@ -106,6 +117,7 @@ section:nth-child(3n + 2) {
   margin: 0 auto;
   list-style-type: circle;
   padding-bottom: 20px;
+  text-indent: 50px;
 }
 #police {
   width: 70%;
@@ -126,29 +138,57 @@ section:nth-child(3n + 2) {
 #illustration {
   clear: both;
 }
-#img07,
-#img08,
+
 img {
   display: block;
   margin: 0 auto;
   padding-bottom: 20px;
   filter: sepia(1);
 }
-/*#img01 {
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-  object-position: 3px, 4px;
-}
-ul {
-  width: 50%;
-  margin: 0 auto;
-  margin-bottom: 48px;
-}
-ul li {
-  width: 540px;
-  margin: 0 auto;
+a {
+  text-decoration: none;
+  color: rgb(122, 48, 97);
 }
 
+footer {
+  background-color: rgb(20, 18, 18);
+  color: white;
+}
+footer p {
+  padding: 20px 0;
+  text-align: center;
+}
+footer p a {
+  color: white;
+  text-decoration: underline;
+}
 
- */
+@media screen and (max-width: 1024px) {
+  section:nth-child(2n + 1) {
+    background-color: transparent;
+  }
+  article {
+    display: flex;
+    flex-direction: column;
+  }
+  h2 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  h1 {
+    width: 50%;
+    font-size: 1.4em;
+    text-align: center;
+    margin: auto;
+  }
+  p,
+  ul {
+    width: 80%;
+  }
+
+  img {
+    width: 100%;
+  }
+}
